# prost-unwrap

./: .prettierrc  Cargo.toml  README.md
prost-unwrap-core/: Cargo.toml  README.md  rustfmt.toml
prost-unwrap-core/src/: include.rs  include_args.rs  lib.rs  macro_args.rs  traverse.rs  type_path.rs
prost-unwrap-core/src/traverse/: item_enum.rs  item_enum_impl.rs  item_mod.rs  item_struct.rs  item_struct_impl.rs  mod.rs
prost-unwrap-proto-tests/: Cargo.toml  build.rs
prost-unwrap-proto-tests/.proto_out/: root.inner.rs  root.rs
prost-unwrap-proto-tests/tests/: proto.rs  trybuild.rs
prost-unwrap-proto-tests/tests/.proto/: root.proto
prost-unwrap-proto-tests/tests/positive/: mod.rs
prost-unwrap-proto-tests/tests/positive/_skeleton/: mod.rs
prost-unwrap-proto-tests/tests/positive/copy_no_modifications/: mod.rs
prost-unwrap-proto-tests/tests/positive/copy_no_modifications/.proto/: test.proto
prost-unwrap-proto-tests/tests/positive/copy_unwrapped/: mod.rs
prost-unwrap-proto-tests/tests/positive/copy_unwrapped/.proto/: test.proto
prost-unwrap-proto-tests/tests/positive/hashmap_of_scalars/: mod.rs
prost-unwrap-proto-tests/tests/positive/hashmap_of_scalars/.proto/: test.proto
prost-unwrap-proto-tests/tests/positive/hashmap_of_structs/: mod.rs
prost-unwrap-proto-tests/tests/positive/hashmap_of_structs/.proto/: test.proto
prost-unwrap-proto-tests/tests/positive/nested_enum/: mod.rs
prost-unwrap-proto-tests/tests/positive/nested_enum/.proto/: test.proto
prost-unwrap-proto-tests/tests/positive/nested_struct/: mod.rs
prost-unwrap-proto-tests/tests/positive/nested_struct/.proto/: test.proto
prost-unwrap-proto-tests/tests/positive/no_modifications/: mod.rs
prost-unwrap-proto-tests/tests/positive/oneof_enums/: mod.rs
prost-unwrap-proto-tests/tests/positive/oneof_enums/.proto/: test.proto
prost-unwrap-proto-tests/tests/positive/oneof_scalars/: mod.rs
prost-unwrap-proto-tests/tests/positive/oneof_scalars/.proto/: test.proto
prost-unwrap-proto-tests/tests/positive/oneof_structs/: mod.rs
prost-unwrap-proto-tests/tests/positive/oneof_structs/.proto/: test.proto
prost-unwrap-proto-tests/tests/positive/repeated_enum/: mod.rs
prost-unwrap-proto-tests/tests/positive/repeated_enum/.proto/: test.proto
prost-unwrap-proto-tests/tests/positive/repeated_scalar/: mod.rs
prost-unwrap-proto-tests/tests/positive/repeated_scalar/.proto/: test.proto
prost-unwrap-proto-tests/tests/positive/repeated_struct/: mod.rs
prost-unwrap-proto-tests/tests/positive/repeated_struct/.proto/: test.proto
prost-unwrap-proto-tests/tests/proto/: root.proto
prost-unwrap-proto-tests/tests/proto/inner/: inner.proto
prost-unwrap-proto-tests/tests/ui/: empty.rs  empty.stderr  from_source_file_invalid_path.rs  from_source_file_invalid_path.stderr  from_source_file_invalid_source.rs  from_source_file_invalid_source.stderr  from_source_file_not_exist.rs  from_source_file_not_exist.stderr  from_source_invalid.rs  from_source_invalid.stderr  from_source_invalid_ident.rs  from_source_invalid_ident.stderr  from_source_no_ident.rs  from_source_no_ident.stderr  from_source_no_path.rs  from_source_no_path.stderr  with_enum_duplicate.rs  with_enum_duplicate.stderr  with_enum_invalid_ident.rs  with_enum_invalid_ident.stderr  with_enum_no_ident.rs  with_enum_no_ident.stderr  with_original_mod_duplicate.rs  with_original_mod_duplicate.stderr  with_original_mod_empty.rs  with_original_mod_empty.stderr  with_original_mod_invalid.rs  with_original_mod_invalid.stderr  with_original_mod_missing.rs  with_original_mod_missing.stderr  with_original_mod_non_absolute.rs  with_original_mod_non_absolute.stderr  with_struct_duplicate.rs  with_struct_duplicate.stderr  with_struct_invalid_field_1.rs  with_struct_invalid_field_1.stderr  with_struct_invalid_field_2.rs  with_struct_invalid_field_2.stderr  with_struct_invalid_fields.rs  with_struct_invalid_fields.stderr  (+22 more)
prost-unwrap-transform/: Cargo.toml
prost-unwrap-transform/src/: lib.rs
src/: lib.rs
tests/: casting.rs  (+3 more)
(+1 files in other folders)
