[package]
name = "prost-unwrap"
version = "0.1.5"
edition = "2021"
authors = ["Denis Farr <denis@spawnlink.eu>"]
license = "Apache-2.0"
repository = "https://github.com/spawn-link/prost-unwrap"
readme = "README.md"
description = "A procedural macro for prost-generated structs validation and type-casting"
keywords = ["protobuf", "grpc", "prost", "tonic"]
categories = ["data-structures", "rust-patterns"]

[workspace]
default-members = ["prost-unwrap-proto-tests", "prost-unwrap-core"]
members = [
  "prost-unwrap-transform",
  "prost-unwrap-core",
  "prost-unwrap-proto-tests",
]
exclude = ["prost-unwrap-proto-tests"]

[dependencies]
prost-unwrap-transform = { version = "0.1.5", path = "prost-unwrap-transform" }
