[package]
name = "prost-unwrap-core"
version = "0.1.5"
edition = "2021"
authors = ["Denis Farr <denis@spawnlink.eu>"]
license = "Apache-2.0"
repository = "https://github.com/spawn-link/prost-unwrap"
readme = "README.md"
description = "A procedural macro implementation for prost-unwrap library"
keywords = ["protobuf", "grpc", "prost", "tonic"]
categories = ["data-structures", "rust-patterns"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
strfmt = "0.2"
