[package]
name = "prost-unwrap-proto-tests"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.cargo-machete]
ignored = ["prost"]

[lib]
path = "src/lib.rs"

[dependencies]
prost = "0.12"
prost-unwrap = { path = ".." }
trybuild = "1.0.91"

[build-dependencies]
prost-build = "0.12"

[features]
ui-tests = []
